--- a/atlas/home.html
+++ b/atlas/home.html
@@ -100,7 +100,7 @@
                 <div class="swiper mySwiper rounded-3xl">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide"><img src="one.png"></div>
-                        <div class="swiper-slide"><img src="two.png"></div>
+                        <div class="swiper-slide"><img src="six.png"></div>
                         <div class="swiper-slide"><img src="three.png"></div>
                         <div class="swiper-slide"><img src="four.png"></div>
                         <div class="swiper-slide"><img src="five.png"></div>
