--- a/atlas/home.html
+++ b/atlas/home.html
@@ -99,7 +99,7 @@
             <div  class="flex items-center justify-center w-screen p-4 bg-gray-100">
                 <div class="swiper mySwiper rounded-3xl">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide"><img src="one.png"></div>
+                        <div class="swiper-slide"><img src="seven.png"></div>
                         <div class="swiper-slide"><img src="six.png"></div>
                         <div class="swiper-slide"><img src="three.png"></div>
                         <div class="swiper-slide"><img src="four.png"></div>
